kb-multiturn-test.log
   Compiling rantaiclaw v0.6.59-alpha (/home/shiro/rantai/RantAI-Agents/packages/rantaiclaw)
warning: unused import: `ChatRequest`
  --> src/agent/compaction.rs:15:37
   |
15 | use crate::providers::{ChatMessage, ChatRequest, ConversationMessage, ToolCall};
   |                                     ^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ProviderClient`
  --> src/providers/rig_native.rs:56:42
   |
56 | use rig_core::client::{CompletionClient, ProviderClient};
   |                                          ^^^^^^^^^^^^^^

warning: use of deprecated function `base64::encode`: Use Engine::encode
   --> src/onboard/provision/channels/nextcloud_talk.rs:121:31
    |
121 |         let encoded = base64::encode(format!("{}:{}", "", app_token.trim())); // user is empty for app token
    |                               ^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

error[E0063]: missing field `session_id` in initializer of `api_v1::ChatRequestBody`
    --> src/gateway/api_v1.rs:1098:18
     |
1098 |             Json(ChatRequestBody {
     |                  ^^^^^^^^^^^^^^^ missing `session_id`

error[E0063]: missing field `session_id` in initializer of `api_v1::ChatRequestBody`
    --> src/gateway/api_v1.rs:1152:18
     |
1152 |             Json(ChatRequestBody {
     |                  ^^^^^^^^^^^^^^^ missing `session_id`

warning: value assigned to `http_proxy` is never read
  --> src/onboard/provision/runtime_surfaces/proxy.rs:82:30
   |
82 |         let mut http_proxy = None;
   |                              ^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `https_proxy` is never read
  --> src/onboard/provision/runtime_surfaces/proxy.rs:83:31
   |
83 |         let mut https_proxy = None;
   |                               ^^^^
   |
   = help: maybe it is overwritten before being read?

For more information about this error, try `rustc --explain E0063`.
warning: `rantaiclaw` (lib test) generated 5 warnings
error: could not compile `rantaiclaw` (lib test) due to 2 previous errors; 5 warnings emitted
